--- a/app/chat/chat.html
+++ b/app/chat/chat.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div id="message-chat" class="contacto-controls" >
-                    <div class="controls">
+                    <div class="message-controls">
                         <div id="message"></div>
                     </div>
                 </div>
