--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -13,7 +13,6 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <!--a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a-->
                         <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
                     </div>
                 </div>
@@ -23,12 +22,11 @@
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_2" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
-                             title="Foto 2" alt="Foto 2">
+                             title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <!--a href="" ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);">Ver</a-->
                         <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
                     </div>
                 </div>
@@ -38,7 +36,7 @@
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_3" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
-                             title="Foto 2" alt="Foto 2">
+                             title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
@@ -52,7 +50,7 @@
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_4" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
-                             title="Foto 3" alt="Foto 3">
+                             title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
@@ -66,7 +64,7 @@
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_5" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
-                             title="Foto 4" alt="Foto 4">
+                             title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
