--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -6,17 +6,21 @@
 
             <div ng-class="{'show-slider-proyecto':hacemosCtrl.slider_nro == 1}" class="main-slider-proyecto">
                 <h3 class="color-terciary">Ecommerce, Mcommerce y Comercio Social:</h3>
-                <p>El comercio electronico, tambien conocido como e-commerce (electronic commerce en inglés), consiste en la compra y venta de productos o de servicios a traves de medios electronicos.</p>
-                <p>La mayor parte del comercio electronico consiste en la compra y venta de productos o servicios entre personas y empresas, sin embargo un porcentaje considerable del comercio electrónico consiste en la adquisición de artículos virtuales (software y derivados en su mayoría), tales como el acceso a contenido "premium" de un sitio web.</p>
+                <p>El comercio electrónico, también conocido como e-commerce (electronic commerce en inglés), consiste en la compra y venta de productos o de servicios a través de medios electrónicos.</p>
+                <p>La mayor parte del comercio electrónico consiste en la compra y venta de productos o servicios entre personas y empresas, sin embargo un porcentaje considerable del comercio electrónico consiste en la adquisición de artículos virtuales (software y derivados en su mayoría), tales como el acceso a contenido "premium" de un sitio web..</p>
+                <p>M-Commerce o comercio móvil (del anglicismo Mobile Commerce) toma sus bases del e-commerce, solo que llevando todas las transacciones a nivel de poder ser ejecutadas desde un teléfono móvil u otro dispositivo inalámbrico móvil.</p>
+                <p>El comercio social (en inglés: social commerce) es una ramificación del comercio electrónico que supone el uso de redes sociales para ayudar en la compra y venta en línea de productos y servicios.</p>
+                <p>El término comercio social fue acuñado por Yahoo! en noviembre de 20051 para describir un conjunto de herramientas de compra colaborativa tales como listas compartidas, valoraciones de usuarios y otro tipo de información y consejos generados por usuarios.</p>
             </div>
             <div ng-class="{'show-slider-proyecto':hacemosCtrl.slider_nro == 2}" class="main-slider-proyecto">
                 <h3 class="color-primary">Institucionales:</h3>
                 <p>Los sitios web institucionales están desarrollados para brindar al usuario información concisa sobre los datos de la empresa, a lo que se dedica y las formas de contacto.</p>
-                <p>Los sitios web institucionales están desarrollados para brindar al usuario información concisa sobre los datos de la empresa, a lo que se dedica y las formas de contacto.</p>
+                <p>Están pensadas para que ofrezcan una experienca rápida y amena que permita facilitar todos los medios de contacto posibles hacia la empresa, ya sea a través de mapas, números de teléfono o formularios de contacto.</p>
+                <p>En estas páginas web se muestra solo un resumen de los servicios o productos ofrecidos por la empresa.</p>
             </div>
             <div ng-class="{'show-slider-proyecto':hacemosCtrl.slider_nro == 3}" class="main-slider-proyecto">
                 <h3 class="color-terciary">Sistemas de gestión:</h3>
-                <p>Un sistema robusto y completo que permite realizar l agestión de ventas, stock, clientes y movimientos contables. Un sistema en evolución constante que crece de acuerdo a las necesidades de nuestros clientes</p>
+                <p>Un sistema robusto y completo que permite realizar la gestión de ventas, stock, clientes y movimientos contables. Un sistema en evolución constante que crece de acuerdo a las necesidades de nuestros clientes.</p>
             </div>
             <div ng-class="{'show-slider-proyecto':hacemosCtrl.slider_nro == 4}" class="main-slider-proyecto">
                 <h3 class="color-primary">Desarrollos a medida:</h3>
