--- a/app/noticia/noticia.html
+++ b/app/noticia/noticia.html
@@ -2,7 +2,7 @@
     <div class="container-info" form-id="noticia">
         <div class="show-noticia-container">
             <div class="show-noticia-foto">
-                <img src="{{noticiaCtrl.noticia.fotos.length > 0 ? 'images/'+noticiaCtrl.noticia.fotos[0].foto : ''}}"
+                <img ng-src="{{noticiaCtrl.noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticiaCtrl.noticia.fotos[0].foto : ''}}"
                      title="Foto 1" alt="Foto 1">
                 <div>
 
