--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -7,7 +7,7 @@
                  class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_1" class="noticia-container">
                     <div class="noticia-foto">
-                        <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
+                        <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
                              title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
@@ -21,7 +21,7 @@
                  class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_2" class="noticia-container">
                     <div class="noticia-foto">
-                        <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
+                        <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
                              title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
@@ -35,7 +35,7 @@
                  class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_3" class="noticia-container">
                     <div class="noticia-foto">
-                        <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
+                        <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
                              title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
@@ -49,7 +49,7 @@
                  class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_4" class="noticia-container">
                     <div class="noticia-foto">
-                        <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
+                        <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
                              title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
@@ -63,7 +63,7 @@
                  class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_5" class="noticia-container">
                     <div class="noticia-foto">
-                        <img ng-src="{{noticia.fotos.length > 0 ? 'images/'+noticia.fotos[0].foto : ''}}"
+                        <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
                              title="{{noticia.fotos[0].foto}}" alt="{{noticia.fotos[0].foto}}">
                     </div>
                     <div class="noticia-info">
