--- a/app/contactanos/contacto.html
+++ b/app/contactanos/contacto.html
@@ -35,9 +35,9 @@
                 <button id="contacto-enviar-mobile" ac-validator ng-click="contactoCtrl.sendMail();">Enviar</button>
             </div>
         </div>
-        <div class="logo-container" style="margin-top: 5%">
+        <!--div class="logo-container" style="margin-top: 5%">
             <img class="" src="images/logo.png" width="140px">
-        </div>
+        </div-->
     </div>
 </div>
 
