--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -1,4 +1,4 @@
-<div ng-controller="NoticiasController as noticiasCtrl" class="container container-color-5 container-menu-margin">
+<div ng-controller="NoticiasController as noticiasCtrl" class="container-noticias container-color-5 container-menu-margin">
     <div class="container-info">
         <h1>Noticias</h1>
 
