--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -6,11 +6,13 @@
 
             <div ng-class="{'show-slider-proyecto':hacemosCtrl.slider_nro == 1}" class="main-slider-proyecto">
                 <h3 class="color-terciary">Ecommerce, Mcommerce y Comercio Social:</h3>
-                <p>El comercio electrónico, también conocido como e-commerce (electronic commerce en inglés), consiste en la compra y venta de productos o de servicios a través de medios electrónicos.</p>
-                <p>La mayor parte del comercio electrónico consiste en la compra y venta de productos o servicios entre personas y empresas, sin embargo un porcentaje considerable del comercio electrónico consiste en la adquisición de artículos virtuales (software y derivados en su mayoría), tales como el acceso a contenido "premium" de un sitio web..</p>
-                <p>M-Commerce o comercio móvil (del anglicismo Mobile Commerce) toma sus bases del e-commerce, solo que llevando todas las transacciones a nivel de poder ser ejecutadas desde un teléfono móvil u otro dispositivo inalámbrico móvil.</p>
-                <p>El comercio social (en inglés: social commerce) es una ramificación del comercio electrónico que supone el uso de redes sociales para ayudar en la compra y venta en línea de productos y servicios.</p>
-                <p>El término comercio social fue acuñado por Yahoo! en noviembre de 20051 para describir un conjunto de herramientas de compra colaborativa tales como listas compartidas, valoraciones de usuarios y otro tipo de información y consejos generados por usuarios.</p>
+                <div class="hacemos-container">
+                    <p>El comercio electrónico, también conocido como e-commerce (electronic commerce en inglés), consiste en la compra y venta de productos o de servicios a través de medios electrónicos.</p>
+                    <p>La mayor parte del comercio electrónico consiste en la compra y venta de productos o servicios entre personas y empresas, sin embargo un porcentaje considerable del comercio electrónico consiste en la adquisición de artículos virtuales (software y derivados en su mayoría), tales como el acceso a contenido "premium" de un sitio web..</p>
+                    <p>M-Commerce o comercio móvil (del anglicismo Mobile Commerce) toma sus bases del e-commerce, solo que llevando todas las transacciones a nivel de poder ser ejecutadas desde un teléfono móvil u otro dispositivo inalámbrico móvil.</p>
+                    <p>El comercio social (en inglés: social commerce) es una ramificación del comercio electrónico que supone el uso de redes sociales para ayudar en la compra y venta en línea de productos y servicios.</p>
+                    <p>El término comercio social fue acuñado por Yahoo! en noviembre de 20051 para describir un conjunto de herramientas de compra colaborativa tales como listas compartidas, valoraciones de usuarios y otro tipo de información y consejos generados por usuarios.</p>
+                </div>
             </div>
             <div ng-class="{'show-slider-proyecto':hacemosCtrl.slider_nro == 2}" class="main-slider-proyecto">
                 <h3 class="color-primary">Institucionales:</h3>
