--- a/app/index.html
+++ b/app/index.html
@@ -228,7 +228,7 @@
   <div class="footer">
     <p>
       © 2016 - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
-      AC-Desarrollos - 011-3111-5006 - <a href="http://ac-desarrollos.com/" class="footer-link">ventas@ac-desarrollos.com</a>  -
+      - Tel (011)3111-5006 - <a href="http://ac-desarrollos.com/" class="footer-link">ventas@ac-desarrollos.com</a>  -
       All Rights Reserved</p>
   </div>
 
