--- a/app/mision/mision.html
+++ b/app/mision/mision.html
@@ -1,26 +1,27 @@
 <div class="container container-color-1 container-menu-margin">
   <div class="container-info">
     <h1>Nuestra Misi&oacute;n</h1>
-    <p>
-      Siendo un empresa de sistemas forjandose en los &uacute;ltimos a&ntilde;os, nuestra visi&oacute;n del
-      mercado es muy diferente de las empresas tradicionales Argentinas. Nuestro objetivo
-      es el servicio y servicio solo lo entendemos por entregar el producto, lo entedemos por
-      entregar el producto y establecer una relaci&oacute;n con el cliente de soporte y crecimiento.
-    </p>
-    <br>
-    <p>
-      Las tecnolog&iacute;as crecen a pasos agigantados a&ntilde;o tras a&ntilde;o, y imposible manejar un
-      negocio propio y mantenerse informado de todos estos avances. Nosotros queremos ser
-      tus asesores y socios en este crecimiento. Nos gusta aprender de tecnolog&iacute;a y ver
-      como aplicarla para que el d&iacute;a a d&iacute;a sea mas f&aacute;cil, mas llevadero y mas lucrativo para
-      nuestros clientes. <strong>Tu crecimiento es nuestro objetivo.</strong>
-    </p>
-    <br>
-    <p>
-      Sabemos que la tecnolog&iacute;a es un dolor de cabeza, pero no tiene porque serlo, la tecnolog&iacute;a tiene que ser
-      una compa&ntilde;era y una herramienta. <strong>Nuestra misi&oacute;n es tu satisfacci&oacute;n.</strong>
-    </p>
-
+    <div class="mision-container">
+      <p>
+        Siendo un empresa de sistemas forjandose en los &uacute;ltimos a&ntilde;os, nuestra visi&oacute;n del
+        mercado es muy diferente de las empresas tradicionales Argentinas. Nuestro objetivo
+        es el servicio y servicio solo lo entendemos por entregar el producto, lo entedemos por
+        entregar el producto y establecer una relaci&oacute;n con el cliente de soporte y crecimiento.
+      </p>
+      <br>
+      <p>
+        Las tecnolog&iacute;as crecen a pasos agigantados a&ntilde;o tras a&ntilde;o, y imposible manejar un
+        negocio propio y mantenerse informado de todos estos avances. Nosotros queremos ser
+        tus asesores y socios en este crecimiento. Nos gusta aprender de tecnolog&iacute;a y ver
+        como aplicarla para que el d&iacute;a a d&iacute;a sea mas f&aacute;cil, mas llevadero y mas lucrativo para
+        nuestros clientes. <strong>Tu crecimiento es nuestro objetivo.</strong>
+      </p>
+      <br>
+      <p>
+        Sabemos que la tecnolog&iacute;a es un dolor de cabeza, pero no tiene porque serlo, la tecnolog&iacute;a tiene que ser
+        una compa&ntilde;era y una herramienta. <strong>Nuestra misi&oacute;n es tu satisfacci&oacute;n.</strong>
+      </p>
+    </div>
     <div class="back">
       <div class="arrow-left"></div>
       <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Volver</a>
