--- a/app/index.html
+++ b/app/index.html
@@ -227,9 +227,9 @@
 
   <div class="footer">
     <p>
-      © 2016 - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
-      - Tel (011)3111-5006 - <a href="http://ac-desarrollos.com/" class="footer-link">ventas@ac-desarrollos.com</a>  -
-      All Rights Reserved</p>
+      Copyright © 2016 - All Rights Reserved - <a href="http://ac-desarrollos.com/" class="footer-link">www.ac-desarrollos.com </a>
+      - Tel (011) 3111-5006 - <a href="http://ac-desarrollos.com/" class="footer-link">ventas@ac-desarrollos.com</a>
+    </p>
   </div>
 
 </body>
