--- a/app/noticias/noticias.html
+++ b/app/noticias/noticias.html
@@ -13,7 +13,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
             </div>
@@ -27,7 +27,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
             </div>
@@ -41,7 +41,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                     <div class="noticia-info">
                         <h5>{{noticia.titulo.length > 60 ? noticia.titulo.substring(0,60) + "....." : noticia.titulo}}</h5>
                         <p>{{noticia.detalles.length > 180 ? noticia.detalles.substring(0, 180) + "....." : noticia.detalles}}</p>
-                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver Noticia</button>
+                        <button ng-click="noticiasCtrl.goToNoticia(noticia.noticia_id);" class="btn btn-default">Ver</button>
                     </div>
                 </div>
             </div>
