--- a/app/index.html
+++ b/app/index.html
@@ -167,7 +167,7 @@
       </div>
 
       <div class="logo">
-        <img src="images/logo.png" alt="logo" height="30px" width="150px">
+        <img src="images/logom.png" alt="logo" height="54px" width="166px">
       </div>
     </div>
 
