--- a/app/hacemos/hacemos.html
+++ b/app/hacemos/hacemos.html
@@ -1,10 +1,10 @@
 <div ng-controller="HacemosController as hacemosCtrl" class="container container-color-2 container-menu-margin">
-    <div class="contenedor-slider-2">
+    <div class="slider-container-1">
         <h1>Que hacemos?</h1>
 
-        <div class="contenedor-slider-3">
+        <div class="slider-container-2">
 
-            <div ng-class="{'contenedor-slider-6':hacemosCtrl.slider_nro == 1}" class="contenedor-slider-7">
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 1}" class="slider-container">
                 <div class="slider-alto">
                     <h3 class="color-terciary">Ecommerce, Mcommerce y Comercio Social:</h3>
                     <p>El comercio electrónico, también conocido como e-commerce (electronic commerce en inglés), consiste en la compra y venta de productos o de servicios a través de medios electrónicos.</p>
@@ -14,7 +14,7 @@
                     <p>El término comercio social fue acuñado por Yahoo! en noviembre de 20051 para describir un conjunto de herramientas de compra colaborativa tales como listas compartidas, valoraciones de usuarios y otro tipo de información y consejos generados por usuarios.</p>
                 </div>
             </div>
-            <div ng-class="{'contenedor-slider-6':hacemosCtrl.slider_nro == 2}" class="contenedor-slider-7">
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 2}" class="slider-container">
                 <div class="slider-alto">
                     <h3 class="color-primary">Institucionales:</h3>
                     <p>Los sitios web institucionales están desarrollados para brindar al usuario información concisa sobre los datos de la empresa, a lo que se dedica y las formas de contacto.</p>
@@ -22,13 +22,13 @@
                     <p>En estas páginas web se muestra solo un resumen de los servicios o productos ofrecidos por la empresa.</p>
                 </div>
             </div>
-            <div ng-class="{'contenedor-slider-6':hacemosCtrl.slider_nro == 3}" class="contenedor-slider-7">
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 3}" class="slider-container">
                 <div class="slider-alto">
                     <h3 class="color-terciary">Sistemas de gestión:</h3>
                     <p>Un sistema robusto y completo que permite realizar la gestión de ventas, stock, clientes y movimientos contables. Un sistema en evolución constante que crece de acuerdo a las necesidades de nuestros clientes.</p>
                 </div>
             </div>
-            <div ng-class="{'contenedor-slider-6':hacemosCtrl.slider_nro == 4}" class="contenedor-slider-7">
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 4}" class="slider-container">
                 <div class="slider-alto">
                     <h3 class="color-primary">Desarrollos a medida:</h3>
                     <p>Si tenés una idea, nosotros te damos un plan para implementarla de una forma seria y aplicando todas las nuevas tecnologias del mercado.</p>
@@ -36,11 +36,11 @@
                     <p>Todos nuestros diseños y desarrollos estan pensados de acuerdo a las necesidades y el negocio de nuestro cliente, cada página es una experiencia única e irrepetible.</p>
                 </div>
             </div>
-            <div ng-class="{'contenedor-slider-6':hacemosCtrl.slider_nro == 5}" class="contenedor-slider-7">
+            <div ng-class="{'slider-selected':hacemosCtrl.slider_nro == 5}" class="slider-container">
                 <div class="slider-alto">
                     <h3 class="color-terciary">Analiticas:</h3>
                     <p>Te ofrecemos las mejores herramientas para que puedas ver que está pasando en tu sitio, las páginas más visitadas, los países, los idiomas, los gustos de tus usuarios y mucho más.</p>
-                 </div>
+                </div>
             </div>
         </div>
 
