--- a/app/noticias/noticias.old.html
+++ b/app/noticias/noticias.old.html
@@ -1,7 +1,11 @@
-<div ng-controller="NoticiasController as noticiasCtrl" class="container container-color-5 container-menu-margin">
-    <div class="slider-container-1">
+<div ng-controller="NoticiasController as noticiasCtrl" class="container-noticias container-color-5 container-menu-margin">
+    <div class="container-info">
         <h1>Noticias</h1>
-
+        <!--div class="noticia-titulo">
+            <h1>Noticias</h1>
+            <div class="noticia-mes">Mes:<div class="arrow-down"></div></div>
+            <div class="noticia-anio">Año:<div class="arrow-down"></div></div>
+        </div-->
         <div class="buscar">
             <label>Buscar:</label>
             <input type="text" class="buscar-control" style="width: 70%;"
@@ -12,8 +16,9 @@
             </div>
         </div>
 
-        <div class="slider-container-2" ng-if="!noticiasCtrl.buscar">
-            <div ng-class="{'slider-selected':noticiasCtrl.slider_nro == 1}" class="slider-container">
+        <div id="main-slider" ng-if="!noticiasCtrl.buscar">
+            <div ng-class="{'show-slider-proyecto':noticiasCtrl.slider_nro == 1}"
+                 class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_1" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
@@ -26,7 +31,8 @@
                     </div>
                 </div>
             </div>
-            <div ng-class="{'slider-selected':noticiasCtrl.slider_nro == 2}" class="slider-container">
+            <div ng-class="{'show-slider-proyecto':noticiasCtrl.slider_nro == 2}"
+                 class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_2" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
@@ -39,7 +45,8 @@
                     </div>
                 </div>
             </div>
-            <div ng-class="{'slider-selected':noticiasCtrl.slider_nro == 3}" class="slider-container">
+            <div ng-class="{'show-slider-proyecto':noticiasCtrl.slider_nro == 3}"
+                 class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_3" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
@@ -52,7 +59,8 @@
                     </div>
                 </div>
             </div>
-            <div ng-class="{'slider-selected':noticiasCtrl.slider_nro == 4}" class="slider-container">
+            <div ng-class="{'show-slider-proyecto':noticiasCtrl.slider_nro == 4}"
+                 class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_4" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
@@ -65,7 +73,8 @@
                     </div>
                 </div>
             </div>
-            <div ng-class="{'slider-selected':noticiasCtrl.slider_nro == 5}" class="slider-container">
+            <div ng-class="{'show-slider-proyecto':noticiasCtrl.slider_nro == 5}"
+                 class="main-slider-proyecto">
                 <div ng-repeat="noticia in noticiasCtrl.noticias_slider_5" class="noticia-container">
                     <div class="noticia-foto">
                         <img ng-src="{{noticia.fotos.length > 0 ? 'http://192.185.67.199/~arielces/ac-generador-noticias/img/'+noticia.fotos[0].foto : ''}}"
@@ -79,6 +88,11 @@
                 </div>
             </div>
         </div>
+
+        <!--div class="back">
+            <div class="arrow-left"></div>
+            <a href="" ng-click="appCtrl.goTo({nombre: 'Volver', path: '/main'});">Volver</a>
+        </div-->
 
         <div class="slider-indicator" ng-if="!noticiasCtrl.buscar">
             <div class="slider_1" ng-class="{slider_selected:noticiasCtrl.slider_nro==1}"
