Cotizador y sabias que

--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -141,13 +141,13 @@
             <div class="container-row">
                 <div class="container-colum" style="flex: 1 1 auto;">
                     <div class="controls controls-margin">
-                        <input type="radio" ng-model="cotizadorCtrl.registro_dominio" value="1"><span class="">Sí</span>
+                        <input type="radio" ng-model="cotizadorCtrl.hosting_correo" value="1"><span class="">Sí</span>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="radio" ng-model="cotizadorCtrl.registro_dominio" value="2"><span class="">No, ya tengo el hosting</span>
+                        <input type="radio" ng-model="cotizadorCtrl.hosting_correo" value="2"><span class="">No, ya tengo el hosting</span>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="radio" ng-model="cotizadorCtrl.registro_dominio" value="3"><span class="">No estoy seguro</span>
+                        <input type="radio" ng-model="cotizadorCtrl.hosting_correo" value="3"><span class="">No estoy seguro</span>
                     </div>
                 </div>
                 <div class="container-colum" style="flex: 1 1 auto;">
