--- a/app/sabias/sabias.html
+++ b/app/sabias/sabias.html
@@ -3,42 +3,14 @@
         <div class="sabias-slider">
             <h1>Sab&iacute;as qué?</h1>
             <div class="sabias-container">
-                <video width="75%" autoplay autobuffer="autobuffer" autoplay="autoplay"
-                       controls loop="loop" ng-if="sabiasCtrl.movie == 1">
+                <!--video width="320" height="240" preload controls >
                     <!--source id="mp4_src" src="movies/movie1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-                    <source src="movies/movie1.ogg" type="video/ogg"-->
+                    <source src="movies/movie1.ogg" type="video/ogg">
                     <source id="3gp_src" src="movies/movie1.3gp" type='video/3gpp; codecs="mp4v.20.8, samr"'>
                     Your browser does not support the <code>video</code> element.
-                </video>
-                <video width="75%" autoplay ng-if="sabiasCtrl.movie == 2">
-                    <!--source src="movies/movie2.mp4" type="video/mp4">
-                    <source src="movies/movie2.ogg" type="video/ogg"-->
-                    <source src="movies/movie2.3gp" type='video/3gpp; codecs="mp4v.20.8, samr"'>
-                    Your browser does not support the video tag.
-                </video>
-                <video width="75%" autoplay ng-if="sabiasCtrl.movie == 3">
-                    <!--source src="movies/movie3.mp4" type="video/mp4">
-                    <source src="movies/movie3.ogg" type="video/ogg"-->
-                    <source src="movies/movie3.3gp" type='video/3gpp; codecs="mp4v.20.8, samr"'>
-                    Your browser does not support the video tag.
-                </video>
-                <video width="75%" autoplay ng-if="sabiasCtrl.movie == 4">
-                    <!--source src="movies/movie4.mp4" type="video/mp4">
-                    <source src="movies/movie4.ogg" type="video/ogg"-->
-                    <source src="movies/movie4.3gp" type='video/3gpp; codecs="mp4v.20.8, samr"'>
-                    Your browser does not support the video tag.
-                </video>
-                <video width="75%" autoplay ng-if="sabiasCtrl.movie == 5">
-                    <!--source src="movies/movie5.mp4" type="video/mp4">
-                    <source src="movies/movie5.ogg" type="video/ogg"-->
-                    <source src="movies/movie5.3gp" type='video/3gpp; codecs="mp4v.20.8, samr"'>
-                    Your browser does not support the video tag.
-                </video>
-                <video width="75%" autoplay ng-if="sabiasCtrl.movie == 6">
-                    <!--source src="movies/movie6.mp4" type="video/mp4">
-                    <source src="movies/movie6.ogg" type="video/ogg"-->
-                    <source src="movies/movie6.3gp" type='video/3gpp; codecs="mp4v.20.8, samr"'>
-                    Your browser does not support the video tag.
+                </video-->
+                <video src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" controls>
+                    Tu navegador no implementa el elemento <code>video</code>.
                 </video>
             </div>
 
