--- a/app/sabias/sabias.html
+++ b/app/sabias/sabias.html
@@ -3,15 +3,35 @@
         <div class="sabias-slider">
             <h1>Sab&iacute;as qué?</h1>
             <div class="sabias-container">
-                <!--video width="320" height="240" preload controls >
-                    <!--source id="mp4_src" src="movies/movie1.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-                    <source src="movies/movie1.ogg" type="video/ogg">
-                    <source id="3gp_src" src="movies/movie1.3gp" type='video/3gpp; codecs="mp4v.20.8, samr"'>
+                <video class="video-screen" autoplay ng-if="sabiasCtrl.movie == 1">
+                    <source src="movies/movie1.mov" >
                     Your browser does not support the <code>video</code> element.
-                </video-->
-                <video src="http://v2v.cc/~j/theora_testsuite/320x240.ogg" controls>
-                    Tu navegador no implementa el elemento <code>video</code>.
                 </video>
+                <video class="video-screen" autoplay ng-if="sabiasCtrl.movie == 2">
+                    <source src="movies/movie2.mov" >
+                    Your browser does not support the <code>video</code> element.
+                </video>
+                <video class="video-screen" autoplay ng-if="sabiasCtrl.movie == 3">
+                    <source src="movies/movie3.mov" >
+                    Your browser does not support the <code>video</code> element.
+                </video>
+                <video class="video-screen" autoplay ng-if="sabiasCtrl.movie == 4">
+                    <source src="movies/movie4.mov" >
+                    Your browser does not support the <code>video</code> element.
+                </video>
+                <video class="video-screen" autoplay ng-if="sabiasCtrl.movie == 5">
+                    <source src="movies/movie5.mov" >
+                    Your browser does not support the <code>video</code> element.
+                </video>
+                <video class="video-screen" autoplay ng-if="sabiasCtrl.movie == 6">
+                    <source src="movies/movie6.mov" >
+                    Your browser does not support the <code>video</code> element.
+                </video>
+                <video class="video-screen" autoplay ng-if="sabiasCtrl.movie == 7">
+                    <source src="movies/movie7.mov" >
+                    Your browser does not support the <code>video</code> element.
+                </video>
+
             </div>
 
             <div class="btn-chat">
