--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -214,7 +214,7 @@
                 </div>
             </div>
 
-            <h3>Diseño Gráfico</h3>
+            <h3>Información Adicional</h3>
             <div class="container-row">
                 <div class="container-colum" style="flex: 1 1 auto;">
                     <div class="controls controls-margin">
