--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -230,10 +230,10 @@
                         <input type="radio" ng-model="cotizadorCtrl.desea_reunion" value="1"><span class="">SI</span>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="radio" ng-model="cotizadorCtrl.registro_dominio" value="2"><span class="">NO</span>
+                        <input type="radio" ng-model="cotizadorCtrl.desea_reunion" value="2"><span class="">NO</span>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="radio" ng-model="cotizadorCtrl.registro_dominio" value="3"><span class="">SI. ¿Donde?</span>
+                        <input type="radio" ng-model="cotizadorCtrl.desea_reunion" value="3"><span class="">SI. ¿Donde?</span>
                         <input type="text" class="form-control" ng-model="cotizadorCtrl.lugar_reunion" >
                     </div>
                 </div>
