--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -141,13 +141,16 @@
             <div class="container-row">
                 <div class="container-colum" style="flex: 1 1 auto;">
                     <div class="controls controls-margin">
-                        <input type="radio" ng-model="cotizadorCtrl.hosting_correo" value="1"><span class="">Sí</span>
+                        <label>Solicitar:</label>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="radio" ng-model="cotizadorCtrl.hosting_correo" value="2"><span class="">No, ya tengo el hosting</span>
+                        <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="1"><span class="">Sí</span>
                     </div>
                     <div class="controls controls-margin">
-                        <input type="radio" ng-model="cotizadorCtrl.hosting_correo" value="3"><span class="">No estoy seguro</span>
+                        <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="2"><span class="">No, ya tengo el hosting</span>
+                    </div>
+                    <div class="controls controls-margin">
+                        <input type="radio" ng-model="cotizadorCtrl.hosting_y_correo" value="3"><span class="">No estoy seguro</span>
                     </div>
                 </div>
                 <div class="container-colum" style="flex: 1 1 auto;">
@@ -240,7 +243,8 @@
                 <div class="container-colum" style="flex: 1 1 auto;">
                     <div class="controls controls-margin">
                         <label>Fecha y hora de reunión</label>
-                        <input type="text" class="form-control" ng-model="cotizadorCtrl.fecha_reunion" >
+                        <input min-date="today;La fecha debe ser mayor a hoy" class="form-control"
+                               type="date" id="fecha_fin" ng-model="cotizadorCtrl.fecha_reunion">
                     </div>
                 </div>
             </div>
