--- a/app/cotizador/cotizador.html
+++ b/app/cotizador/cotizador.html
@@ -158,7 +158,7 @@
                         <label>Plan del Hosting:</label>
                         <select ng-model="cotizadorCtrl.hosting_selected"
                                 ng-options="plan_hosting.name for plan_hosting in cotizadorCtrl.plan_hosting"
-                                class="">
+                                class="form-control">
                         </select>
                     </div>
                 </div>
