--- a/app/sabias/sabias.html
+++ b/app/sabias/sabias.html
@@ -2,7 +2,10 @@
     <div class="container-info">
         <div class="sabias-slider">
             <h1>Sab&iacute;as qué?</h1>
-            <div class="sabias-container">
+            <div class="sabias-container" style="position: relative">
+                <button ng-click="sabiasCtrl.nextMovie(sabiasCtrl.movie + 1);"
+                        ng-if="sabiasCtrl.show_btn" class="btn-movie">{{sabiasCtrl.btn_titulo}}</button>
+
                 <video class="video-screen" autoplay ng-if="sabiasCtrl.movie == 1">
                     <source src="movies/movie1.mov" >
                     Your browser does not support the <code>video</code> element.
@@ -34,27 +37,28 @@
 
             </div>
 
-            <div class="btn-chat">
+            <!--div class="btn-chat">
                 <div class="arrow-up arrow-chat-margin"></div>
-                <button id="cotizar" ng-click="sabiasCtrl.nextMovie();">Siguiente</button>
-            </div>
+                <button id="cotizar" ng-click="sabiasCtrl.nextMovie(1);">Siguiente</button>
+            </div-->
 
             <div class="slider-indicator">
                 <div class="slider_1" ng-class="{slider_selected:sabiasCtrl.slider_nro==1}"
-                     ng-click="sabiasCtrl.slider_nro=1;" title="{{sabiasCtrl.videos[0].title}}"></div>
+                     ng-click="sabiasCtrl.nextMovie(1);" ></div>
                 <div class="slider_2" ng-class="{slider_selected:sabiasCtrl.slider_nro==2}"
-                     ng-click="sabiasCtrl.slider_nro=2;" title="{{sabiasCtrl.videos[1].title}}"></div>
+                     ng-click="sabiasCtrl.nextMovie(2);" ></div>
                 <div class="slider_3" ng-class="{slider_selected:sabiasCtrl.slider_nro==3}"
-                     ng-click="sabiasCtrl.slider_nro=3;" title="{{sabiasCtrl.videos[2].title}}"></div>
+                     ng-click="sabiasCtrl.nextMovie(3);" ></div>
                 <div class="slider_4" ng-class="{slider_selected:sabiasCtrl.slider_nro==4}"
-                     ng-click="sabiasCtrl.slider_nro=4;" title="{{sabiasCtrl.videos[3].title}}"></div>
+                     ng-click="sabiasCtrl.nextMovie(4);" ></div>
                 <div class="slider_5" ng-class="{slider_selected:sabiasCtrl.slider_nro==5}"
-                     ng-click="sabiasCtrl.slider_nro=5;" title="{{sabiasCtrl.videos[4].title}}"></div>
+                     ng-click="sabiasCtrl.nextMovie(5);" ></div>
                 <div class="slider_6" ng-class="{slider_selected:sabiasCtrl.slider_nro==6}"
-                     ng-click="sabiasCtrl.slider_nro=6;" title="{{sabiasCtrl.videos[5].title}}"></div>
+                     ng-click="sabiasCtrl.nextMovie(6);" ></div>
                 <div class="slider_7" ng-class="{slider_selected:sabiasCtrl.slider_nro==7}"
-                     ng-click="sabiasCtrl.slider_nro=7;" title="{{sabiasCtrl.videos[6].title}}"></div>
+                     ng-click="sabiasCtrl.nextMovie(7);" ></div>
             </div>
+            <div>{{sabiasCtrl.titulo_video}}</div>
         </div>
     </div>
 </div>
